--- a/ProcessInformation-web/src/main/resources/log4j.properties
+++ b/ProcessInformation-web/src/main/resources/log4j.properties
@@ -1,37 +1,37 @@
-#log4j.rootLogger=,error,access,monitor,work
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
-#log4j.appender.stdout.Threshold = DEBUG 
-#log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n
-#  
-#log4j.appender.error=com.chunbo.SysMonitor.base.log.ErrorLogAppender
-#log4j.appender.error.layout=org.apache.log4j.PatternLayout  
-#log4j.appender.error.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n 
-#log4j.appender.error.datePattern='_'yyyyMMdd'.log'
-#log4j.appender.error.Threshold = ERROR
-#log4j.appender.error.append=true 
-#log4j.appender.error.File=${webapp.root}log/error.log
-#
-#log4j.appender.access=com.chunbo.SysMonitor.base.log.AccessLogAppender
-#log4j.appender.access.layout=org.apache.log4j.PatternLayout  
-#log4j.appender.access.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n
-#log4j.appender.access.datePattern='_'yyyyMMdd'.log'
-#log4j.appender.access.Threshold = ACCESS
-#log4j.appender.access.append=true
-#log4j.appender.access.File=${webapp.root}log/access.log
-#
-#log4j.appender.monitor=com.chunbo.SysMonitor.base.log.MonitorLogAppender
-#log4j.appender.monitor.layout=org.apache.log4j.PatternLayout  
-#log4j.appender.monitor.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %m%n
-#log4j.appender.monitor.datePattern='_'yyyyMMdd'.log'
-#log4j.appender.monitor.Threshold = MONITOR
-#log4j.appender.monitor.append=true
-#log4j.appender.monitor.File=${webapp.root}log/monitor.log
-#
-#log4j.appender.work=com.chunbo.SysMonitor.base.log.WorkLogAppender
-#log4j.appender.work.layout=org.apache.log4j.PatternLayout  
-#log4j.appender.work.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
-#log4j.appender.work.datePattern='_'yyyyMMdd'.log'
-#log4j.appender.work.Threshold = WORK
-#log4j.appender.work.append=true
-#log4j.appender.work.File=${webapp.root}log/work.log
+log4j.rootLogger=,error,access,monitor,work
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
+log4j.appender.stdout.Threshold = DEBUG 
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n
+  
+log4j.appender.error=com.processinformation.base.log.ErrorLogAppender
+log4j.appender.error.layout=org.apache.log4j.PatternLayout  
+log4j.appender.error.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n 
+log4j.appender.error.datePattern='_'yyyyMMdd'.log'
+log4j.appender.error.Threshold = ERROR
+log4j.appender.error.append=true 
+log4j.appender.error.File=${webapp.root}log/error.log
+
+log4j.appender.access=com.processinformation.base.log.AccessLogAppender
+log4j.appender.access.layout=org.apache.log4j.PatternLayout  
+log4j.appender.access.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} - %m%n
+log4j.appender.access.datePattern='_'yyyyMMdd'.log'
+log4j.appender.access.Threshold = ACCESS
+log4j.appender.access.append=true
+log4j.appender.access.File=${webapp.root}log/access.log
+
+log4j.appender.monitor=com.processinformation.base.log.MonitorLogAppender
+log4j.appender.monitor.layout=org.apache.log4j.PatternLayout  
+log4j.appender.monitor.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %m%n
+log4j.appender.monitor.datePattern='_'yyyyMMdd'.log'
+log4j.appender.monitor.Threshold = MONITOR
+log4j.appender.monitor.append=true
+log4j.appender.monitor.File=${webapp.root}log/monitor.log
+
+log4j.appender.work=com.processinformation.base.log.WorkLogAppender
+log4j.appender.work.layout=org.apache.log4j.PatternLayout  
+log4j.appender.work.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
+log4j.appender.work.datePattern='_'yyyyMMdd'.log'
+log4j.appender.work.Threshold = WORK
+log4j.appender.work.append=true
+log4j.appender.work.File=${webapp.root}log/work.log
