--- a/ProcessInformation-web/src/main/resources/configs/db/ds.properties
+++ b/ProcessInformation-web/src/main/resources/configs/db/ds.properties
@@ -1,3 +1,3 @@
-monitordb.user=wms
-monitordb.pass=wms
-monitordb.url=jdbc:mysql://172.16.10.237:3306/MonitorDB
+testdb.user=root
+testdb.pass=root
+testdb.url=jdbc:mysql://localhost:3306/test
